Add separated test for invoker in jdk<11 and jdk>10