@@ -137,9 +137,11 @@
 							<longModulepath>false</longModulepath>
 							<arguments>
 								<argument>--module-path</argument>
-								<argument>${project.build.directory}/../../../local-repo/ch/powerunit/extensions/powerunit-extensions-exceptions/@project.version@/powerunit-extensions-exceptions-@project.version@.jar${path.separator}${project.build.directory}/${project.build.finalName}.jar</argument>
+								<argument>${project.build.directory}/../../../local-repo/javax/xml/bind/jaxb-api/2.3.1/jaxb-api-2.3.1.jar${path.separator}${project.build.directory}/../../../local-repo/ch/powerunit/extensions/powerunit-extensions-exceptions/@project.version@/powerunit-extensions-exceptions-@project.version@.jar${path.separator}${project.build.directory}/${project.build.finalName}.jar</argument>
 								<argument>-cp</argument>
-								<argument>${project.build.directory}/../../../local-repo/javax/xml/bind/jaxb-api/2.3.1/jaxb-api-2.3.1.jar${path.separator}${project.build.directory}/../../../local-repo/javax/javax/activation/javax.annotation-api/1.3.2/javax.annotation-api-1.3.2.jar${path.separator}${project.build.directory}/../../../local-repo/javax/com/sun/xml/bind/jaxb-core/2.3.0.1/jaxb-core-2.3.0.1.jar${path.separator}${project.build.directory}/../../../local-repo/javax/com/sun/xml/bind/jaxb-impl/2.3.2/jaxb-impl-2.3.2.jar</argument>
+								<argument>${project.build.directory}/../../../local-repo/javax/javax/activation/javax.annotation-api/1.3.2/javax.annotation-api-1.3.2.jar${path.separator}${project.build.directory}/../../../local-repo/javax/com/sun/xml/bind/jaxb-core/2.3.0.1/jaxb-core-2.3.0.1.jar${path.separator}${project.build.directory}/../../../local-repo/javax/com/sun/xml/bind/jaxb-impl/2.3.2/jaxb-impl-2.3.2.jar</argument>
+								<argument>--add-modules</argument>
+								<argument>jaxb-api</argument>
 								<argument>--module</argument>
 								<argument>powerunit.test/ch.powerunittest.samples.FunctionSamplesTest</argument>
 								<argument>JAXB</argument>
